# 3DPlanner_FULL

./: .gitignore  DEPLOYMENT_P6A_JETSON_UBUNTU_GUIDE.md  MANUAL_GITHUB_UPLOAD_P5B_P5C.md  P5A_FINAL_BASELINE_README.md  README.md
Air/ros2_ws/src/bimodal_air_bringup/: package.xml  setup.cfg  setup.py
Air/ros2_ws/src/bimodal_air_bringup/launch/: air_baseline.launch.py
Ground/ros2_ws/src/bimodal_ground_bringup/: package.xml  setup.cfg  setup.py
Ground/ros2_ws/src/bimodal_ground_bringup/launch/: ground_baseline.launch.py
Map/ros2_ws/src/bimodal_e2e_sim_tools/: package.xml  setup.cfg  setup.py
Map/ros2_ws/src/bimodal_e2e_sim_tools/bimodal_e2e_sim_tools/: demo_explainability_overlay_node.py  e2e_metrics_logger_node.py  fake_path_executor_node.py  visual_tf_guard_node.py
Map/ros2_ws/src/bimodal_map_bringup/: package.xml  setup.cfg  setup.py
Map/ros2_ws/src/bimodal_map_bringup/launch/: e2e_closed_loop_map_side.launch.py  map_backend_bridge.launch.py  map_baseline.launch.py  mux_baseline.launch.py  octomap_pointcloud_backend.launch.py  octomap_visual_exploration_demo_map_side.launch.py  p1c_real_sensor_pointcloud_input.launch.py  rviz_bimodal.launch.py  visual_exploration_demo_map_side.launch.py
docs/: github_backup_report.md  p1c_real_sensor_pointcloud_input.md  p2a_e2e_closed_loop_sim_plan.md  p2b_visual_exploration_demo_plan.md  p2c_rviz_and_exploration_quality_plan.md  p2c_rviz_display_fix_guide.md  quick_start_live_rviz.md
scripts/: build_air.sh  build_ground.sh  build_map.sh  check_display_rviz_env.sh  check_p5b_live_demo_status.sh  check_rviz_tf_ready.sh  check_visual_topics_ready.sh  collect_debug_package.sh  env_visual_demo.sh  fix_rviz_display_env_suggestions.sh  p6a_build_all.sh  p6a_check_environment.sh  p6a_export_debug_package.sh  p6a_runtime_monitor.sh  p6a_runtime_preflight.sh  preflight_p5c_pointcloud_input.sh  print_live_rviz_commands.sh  print_visual_demo_commands.sh  run_air.sh  run_all_baseline.sh  run_e2e_closed_loop_sim.sh  run_ground.sh  run_headless_acceptance.sh  run_live_rviz_demo_all_in_one.sh  run_map.sh  run_mux.sh  run_p1b_octomap_backend_demo.sh  run_p1c_live_rviz_external_pointcloud.sh  run_p1c_real_sensor_pointcloud_input_validation.sh  run_p2c_exploration_quality_demo.sh  run_p2d_frontier_quality_demo.sh  run_p2e_octomap_exploration_quality_demo.sh  run_p2f_long_run_stability_validation.sh  run_p3a_p4a_real_planner_wrapper_v0_validation.sh  run_p3b_air_fuel_quality_validation.sh  run_p4b_ground_3d_quality_validation.sh  run_p5a_full_bimodal_acceptance_validation.sh  run_p5a_full_bimodal_live_demo.sh  (+15 more)
(+55 files in other folders)
