<?xml version="1.0"?>
<package format="3">
  <name>bimodal_e2e_sim_tools</name>
  <version>0.1.0</version>
  <description>Closed-loop simulation tools for bimodal 3D planner integration tests.</description>
  <maintainer email="nuaa@example.com">nuaa</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
