<?xml version="1.0"?>
<package format="3">
  <name>bimodal_map_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the bimodal map baseline.</description>
  <maintainer email="nuaa@example.com">nuaa</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>bimodal_virtual_sensors</exec_depend>
  <exec_depend>bimodal_3d_map_adapter</exec_depend>
  <exec_depend>bimodal_mode_mux</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
